# aitools

./: .env.example  README.md  main.py  mcp_server.py  pyproject.toml  word_mcp.py
madokast/llm/: chat_bot.py  quick_chat.py  test_openai.py
madokast/llm/test/: test_openai.py
madokast/tools/client/: math_client.py
madokast/tools/mcp/: life_log_mcp.py  math_mcp.py  word_mcp.py
madokast/tools/server/: math_server.py
madokast/tools/utils/: english_inflections.py  obsidian_english_words.py  print_exception.py  thread_synchronized.py
madokast/tools/utils/english_word/: inflections.py  meanings.py  obsidian_english_words.py  one_meaning.py
madokast/utils/: cli.py  env.py  logger.py  logging_init.py  thread_local.py
