[project]
name = "aitools"
version = "0.1.0"
description = "Tools using LLM AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "googletrans>=4.0.2",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.3",
    "langchain[openai]>=0.3.24",
    "mcp[cli]>=1.13.1",
    "word-forms>=2.1.0",
]
